<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameslabel"
            />
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:id="@+id/player1"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VS"
            android:layout_gravity="center" android:textStyle="bold"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/player2"
            android:id="@+id/player2" android:layout_gravity="center"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/button" android:layout_gravity="center" android:onClick="onChoiceInput"/>
</LinearLayout>

