<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choicelabel"
            android:id="@+id/textView" android:layout_gravity="center"/>
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:orientation="vertical" android:layout_gravity="center"
            android:gravity="center_horizontal">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


            <TextView
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serve"
                    android:id="@+id/serveView"  android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"/>
            <TextView
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side"
                    android:id="@+id/sideView" android:layout_marginLeft="10dp"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/name1" />
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serve1" android:layout_column="1" android:checked="false"
                    android:layout_gravity="center" android:layout_weight="0" />
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player1_side"
                    android:entries="@array/sideslist"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/name2" />
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serve2"  android:checked="false"
                    android:layout_gravity="center"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:layout_gravity="center"
                    android:id="@+id/button" android:onClick="onSubmit" android:layout_column="2"/>
        </TableRow>
    </TableLayout>

</LinearLayout>